# continuum

./: .dockerignore  .env  .gitignore  Caddyfile  Dockerfile  GARDEN_WALL_GUIDE.md  HOW_IT_WORKS.md  IMPROVEMENTS.md  IMPROVEMENT_SUMMARY.md  README.md  SETUP_DOCKER.md  SETUP_KUBERNETES.md  SETUP_MONITORING.md  STARTUP_GUIDE.md  STARTUP_GUIDE_WIN.md  TIER3_COMPLETION.md  activate_garden_wall.sh  alert_rules.yml  claude.md  demo_enhanced_features.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-startup.sh  example_ui.py  learning_history.json  main.py  prometheus.yml  pyproject.toml  requirements.lite.txt  requirements.txt  run_api.py  startup.bat  startup.sh  test_llm_providers.py
agents/: base.py  image_adapter.py  image_generation.py  research_adapter.py  research_real.py
api/: app.py  main.py  models.py  routes.py
cache/: __init__.py  cache_manager.py  decorators.py  redis_cache.py
config/: logging_config.py  settings.py
content_generation/: multimodal.py
core/: concept_orchestrator.py  feature_flags.py
data_pipeline/: ingestion.py  real_ingestion.py
database/: database.py  models.py  repositories.py
docs/: SETUP_CACHING.md  SETUP_POSTGRES.md  SETUP_TRACING.md  SETUP_WEB_SEARCH.md  TIER2_COMPLETION.md
embeddings/: service.py
feedback_system/: core.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
k8s/: configmap.yaml  deployment.yaml  jaeger.yaml  namespace.yaml  postgres.yaml  redis.yaml
knowledge_graph/: cross_reference_engine.py  engine.py  persistent_engine.py  postgres_engine.py
llm_service/: base.py  (+7 more)
(+40 files in other folders)
